Incorrect Date returned between March 1, 2034 and February 28, 2100. https://bugs.webkit.org/show_bug.cgi?id=130123

Patch by Byungseon Shin <sun.shin@lge.com> on 2014-03-14
Reviewed by Mark Lam.

Fix logic by using predefined Date APIs.

Source/WTF:

* wtf/DateMath.cpp:
(WTF::ymdhmsToSeconds):

LayoutTests:

* js/date-constructor-expected.txt:
* js/script-tests/date-constructor.js:
(testDate):

Canonical link: https://commits.webkit.org/148256@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165667 268f45cc-cd09-0410-ab3c-d52691b4dbfc